# ackermann_sim

./: readme.md
ackermann_vehicle_description/: package.xml
ackermann_vehicle_description/launch/: ackermann_vehicle.launch  ackermann_vehicle_rviz.launch
ackermann_vehicle_description/rviz/: ackerman_model.rviz
ackermann_vehicle_description/urdf/: ackermann.urdf.xacro
ackermann_vehicle_gazebo/: CMakeLists.txt  package.xml
ackermann_vehicle_gazebo/config/: ackermann_ctrlr_params.yaml  ackermann_joint_ctrlr_params.yaml
ackermann_vehicle_gazebo/launch/: ackermann_gazebo.launch  ackermann_vehicle.launch
ackermann_vehicle_gazebo/worlds/: ground.world  model.sdf
